<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_change_language_settings"
        android:title="@string/change_language_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/action_open_favorites"
        android:title="@string/open_favorites_movie"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="always"/>

</menu>