<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetail"
    android:padding="@dimen/main_padding">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar_favorite_detail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/favorite_movie_poster_detail"
            android:layout_width="180dp"
            android:layout_height="270dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/favorite_movie_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Movie Title"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favorite_movie_poster_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/favorite_movie_year_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:text="@string/detail_movie_year_release"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@+id/favorite_movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie_title_detail" />

        <TextView
            android:id="@+id/favorite_movie_year_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/favorite_movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie_year_detail_title" />

        <Button
            android:id="@+id/button_remove_favorite"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/remove"
            android:backgroundTint="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/favorite_movie_poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie_year_detail" />

        <TextView
            android:id="@+id/favorite_movie_overview_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:text="@string/detail_movie_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie_poster_detail" />

        <TextView
            android:id="@+id/favorite_movie_overview_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_movie_overview_detail_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>